# QualerInternalAPI

./: .gitignore  README.md  ToolTypes.json  alembic.ini  client_account_data.csv  client_account_data.json  clients.json  fetchClients.ps1  getClientInformation.py  getServiceGroups.py  getUncertaintyModal.py  getUncertaintyParameters.py  my_qualer_utils.py  parse.py  parseToolTypes.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 765f93117946_initial_schema.py
docs/: BREAKTHROUGH_HTTP_AUTHENTICATION.md  ENDPOINT_AUTHENTICATION_PATTERNS.md  REORGANIZATION_COMPLETE.md  REPO_ORGANIZATION.md  STORAGE_ADAPTERS.md
examples/: service_level_parameters_example.py  service_measurements_example.py  unified_client_example.py
integrations/qualer_sdk/: client.py
persistence/: __init__.py  models.py  schema.py  storage.py
qualer_internal_sdk/: __init__.py  client.py  schemas.py
scripts/: Clients_Read.py  fetchClients.ps1  getClientInformation.py  getServiceGroups.py  getServiceLevelParameters.py  getServiceMeasurements.py  getStandards.py  getUncertaintyModal.py  getUncertaintyParameters.py  parseClientInformation.py
templates/: extraction_template.py
tests/: conftest.py  test.py  test_csrf_token.py  test_fetch_and_store.py  test_html_parser.py  test_http_auth_pattern.py  test_service_endpoints.py  test_storage.py  test_uncertainty.py  test_uncertainty_endpoints.py
tests/testdata/: UncertaintyParamters.json
utils/: __init__.py  auth.py  html_parser.py
(+17 files in other folders)
